--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-github"></i></a></li>
-         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://github.com/osvaldo1963"><i class="fa fa-github"></i></a></li>
+         <li><a href="https://twitter.com/dev_oln"><i class="fa fa-twitter"></i></a></li>
+         <li><a href="https://www.instagram.com/osvaldo_lopez_dev/"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -596,9 +596,9 @@
      		<div class="col-six tab-full pull-right social">
 
      			<ul class="footer-social">        
-			      <li><a href="#"><i class="fa fa-github"></i></a></li>
-			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://github.com/osvaldo1963"><i class="fa fa-github"></i></a></li>
+					<li><a href="https://twitter.com/dev_oln"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="https://www.instagram.com/osvaldo_lopez_dev/"><i class="fa fa-instagram"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
