personal project section added

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I’m a self-taught software develop  with 6 years of experience building scalable software. I passionately combine good design, technology, and innovation in all my projects, which I like to accompany from the first idea to release.Currently, I'm focused on the backend development.</p>
+   				<p class="lead">I’m a self-taught software develop  with 6 years of experience building scalable software. I passionately combine good design, technology, and innovation in all my projects, which I like to accompany from the first idea to release.Currently, I'm focused on the full-stack development.</p>
    			</div>   			
 
    		</div>   		
@@ -121,7 +121,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I am a full stack developer. I am currently working at fleet55 as software developer.</p>
+   			<p>I am currently working at fleet55 as full-stack developer.</p>
 
    			<ul class="info-list">
    				<li>
@@ -135,10 +135,6 @@
    				<li>
    					<strong>Job:</strong>
    					<span>Full-Stack Developer Freesalancer and Software Developer at Fleet55</span>
-   				</li>
-   				<li>
-   					<strong>Website:</strong>
-   					<span>www.osvaldolopez.us</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
@@ -207,7 +203,7 @@
    ================================================== -->
 	<section id="portfolio">
 
-		<div class="row section-intro">
+	<div class="row section-intro">
    		<div class="col-twelve">
 
    			<h5>Portfolio</h5>
@@ -344,10 +340,78 @@
 		
 	</section> <!-- /portfolio --> 
 	
+	<!-- personal projects
+   ================================================== -->
+   <section id="portfolio">
+
+	<div class="row section-intro">
+   		<div class="col-twelve">
+
+   			<h5>Projects</h5>
+   			<h1>Personal Projects</h1>
+
+   		</div>   		
+   	</div> <!-- /section-intro--> 
+
+   	<div class="row portfolio-content">
+
+   		<div class="col-twelve">
+
+   			<!-- portfolio-wrapper -->
+	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+
+	         	<div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/dimmi.jpg" alt="Liberty">
+	                  <a href="#modal-p-01" class="overlay">	                  	           
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+								<h3 class="folio-title">Dimmi App</h3>	     					    
+								<span class="folio-types">
+									chat app
+								</span>
+		     				</div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>	               
+	        	</div> <!-- /folio-item -->
+	            <!-- modal popups - begin
+	            ============================================================= -->
+	            	<div id="modal-p-01" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+				     		<img src="images/portfolio/modals/m-dimmi.jpg" alt="" />
+				     	</div>      	
+
+					   <div class="description-box">
+					      <h4>Dimmi App</h4>		      
+					      <p>
+							Dimmi was build in a weekend of 4th of july. Dimmi is cross plataform with flatter and  responsive. 
+						  </p>
+					      <div class="categories">Web, iOS(coming soon), Android(comming soon), Desktop(comming soon)</div>			               
+					   </div>
+
+			         <div class="link-box">
+			            <a href="https://txtmeio.herokuapp.com/">Details</a>
+					    <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   	</div> <!-- /modal-01 -->
+				   <!-- modal popups - end
+	            ============================================================= -->
+
+	         </div> <!-- /portfolio-wrapper --> 
+
+   		</div>  <!-- /twelve -->   
+
+   	</div> <!-- /portfolio-content --> 
+		
+	</section> <!-- /portfolio --> 
+	
+
 	<!-- services Section
    ================================================== -->
 	<section id="services">
-
 		<div class="overlay"></div>
 
 		<div class="row section-intro">
@@ -415,9 +479,7 @@
    		
    	</div> <!-- /services-content -->
 		
-	</section> <!-- /services -->	
-
-	
+	</section> <!-- /services -->		
    <!-- contact
    ================================================== -->
 	<section id="contact">
