--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
+						<li><a class="smoothscroll"  href="#personal" title="">Personal Projects</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>					
 					</ul>
@@ -346,8 +347,6 @@
 
 	<div class="row section-intro">
    		<div class="col-twelve">
-
-   			<h5>Projects</h5>
    			<h1>Personal Projects</h1>
 
    		</div>   		
@@ -386,7 +385,10 @@
 					   <div class="description-box">
 					      <h4>Dimmi App</h4>		      
 					      <p>
-							Dimmi was build in a weekend of 4th of july. Dimmi is cross plataform with flatter and  responsive. 
+							Dimmi was build in a weekend of 4th of July. Dimmi is cross plataform chat with a responsive design <br>
+								- flatter(dart) <br>
+								- firebase <br>
+								- heroku <br>
 						  </p>
 					      <div class="categories">Web, iOS(coming soon), Android(comming soon), Desktop(comming soon)</div>			               
 					   </div>
