ga professional webside added

--- a/index.html
+++ b/index.html
@@ -266,6 +266,22 @@
 	                  </a>
 	               </div>
 	        	</div> <!-- /folio-item -->
+
+				<div class="bgrid folio-item">
+					<div class="item-wrap">
+						<img src="images/portfolio/ga.jpg"alt="Clouds">
+						<a href="#modal-04" class="overlay">             		                  
+							<div class="folio-item-table">
+								<div class="folio-item-cell">
+									<h3 class="folio-title">GA Professional</h3>	     					    
+											<span class="folio-types">
+												Web Development and Design
+											</span>		     		
+										</div> 	                      	
+							</div>                    
+						</a>
+					</div>
+				 </div> <!-- /folio-item -->
 	            
 	            <!-- modal popups - begin
 	            ============================================================= -->
@@ -287,48 +303,67 @@
 					    <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-01 -->
+				</div> <!-- /modal-01 -->
 
-				   <div id="modal-02" class="popup-modal slider mfp-hide">	
+				<div id="modal-02" class="popup-modal slider mfp-hide">	
 
-				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
-				     	</div>      	
+					<div class="media">
+						<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+					</div>      	
 
-					   <div class="description-box">
-					      <h4>Fleet55</h4>		      
-					      <p>Plan your route in seconds. Save hours.Map your stops with a single import for the fastest optimized routes.</p>
+					<div class="description-box">
+						<h4>Fleet55</h4>		      
+						<p>Plan your route in seconds. Save hours.Map your stops with a single import for the fastest optimized routes.</p>
 
-					      <div class="categories">Full-Stack developer</div>			               
-					   </div>
+						<div class="categories">Full-Stack developer</div>			               
+					</div>
 
-			         <div class="link-box">
-			            <a href="https://fleet55.com">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
+					<div class="link-box">
+					<a href="https://fleet55.com">Details</a>
+						<a href="#" class="popup-modal-dismiss">Close</a>
+					</div>		      
 
-				   </div> <!-- /modal-02 -->
+				</div> <!-- /modal-02 -->
 
-				   <div id="modal-03" class="popup-modal slider mfp-hide">	
+				<div id="modal-03" class="popup-modal slider mfp-hide">	
 
-				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-clouds.jpg" alt="" />
-				     	</div>      	
+					<div class="media">
+						<img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+					</div>      	
 
-					   <div class="description-box">
-					      <h4>MintStudioApp</h4>		      
-					      <p>MintStudio gives musicians access to semi-professional sound through our app. Automatic and instant music mastering, it's like having a producer right on your phone</p>
+					<div class="description-box">
+						<h4>MintStudioApp</h4>		      
+						<p>MintStudio gives musicians access to semi-professional sound through our app. Automatic and instant music mastering, it's like having a producer right on your phone</p>
 
-					      <div class="categories">Web Design</div>			               
-					   </div>
+						<div class="categories">Web Design</div>			               
+					</div>
 
-			         <div class="link-box">
-			            <a href="">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
+					<div class="link-box">
+					<a href="">Details</a>
+						<a href="#" class="popup-modal-dismiss">Close</a>
+					</div>		      
 
-				   </div> <!-- /modal-03 -->
+				</div> <!-- /modal-03 -->
+				
+				<div id="modal-04" class="popup-modal slider mfp-hide">	
 
+					<div class="media">
+						<img src="images/portfolio/modals/m-ga.jpg" alt="" />
+					</div>      	
+
+					<div class="description-box">
+						<h4>G.A. Professional</h4>		      
+						<p>G. A. Cleaning Services is a locally owned and operated full-service cleaning company that has served loyal clients throughout Portland And Vancouver since 2001. We’re proud to deliver consistently superior results to individuals and businesses, real estate agents, property managers and office complexes.</p>
+
+						<div class="categories">Web Design</div>			               
+					</div>
+
+					<div class="link-box">
+						<a href="https://gacleaning.net/">Details</a>
+						<a href="#" class="popup-modal-dismiss">Close</a>
+					</div>		      
+
+				</div>
 				   <!-- modal popups - end
 	            ============================================================= -->
 
@@ -481,7 +516,8 @@
    	</div> <!-- /services-content -->
 		
 	</section> <!-- /services -->		
-   <!-- contact
+
+	<!-- contact
    ================================================== -->
 	<section id="contact">
 
@@ -587,7 +623,6 @@
    	</div> <!-- /contact-info -->
 		
 	</section> <!-- /contact -->
-
 
    <!-- footer
    ================================================== -->
