project added and updated some text

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I’m a self-taught software develop  with 6 years of experience building scalable software. I passionately combine good design, technology, and innovation in all my projects, which I like to accompany from the first idea to release.Currently, I'm focused on the full-stack development.</p>
+   				<p class="lead">I’m a self-taught software developer with 6 years of experience building scalable software. I passionately combine good design, technology, and innovation in all my projects, which I like to accompany from the first idea to release.Currently, I'm focused on the full-stack development.</p>
    			</div>   			
 
    		</div>   		
@@ -391,7 +391,7 @@
    		<div class="col-twelve">
 
    			<!-- portfolio-wrapper -->
-	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+	         <div id="folio-wrapper" class="block-1-1 block-mob-full stack">
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
@@ -408,6 +408,7 @@
 	                  </a>
 	               </div>	               
 	        	</div> <!-- /folio-item -->
+
 	            <!-- modal popups - begin
 	            ============================================================= -->
 	            	<div id="modal-p-01" class="popup-modal slider mfp-hide">	
@@ -428,7 +429,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://txtmeio.herokuapp.com/">Details</a>
+			            <a href="https://txtmeio.herokuapp.com/">Go to Page</a>
 					    <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -437,7 +438,56 @@
 	            ============================================================= -->
 
 	         </div> <!-- /portfolio-wrapper --> 
+			 
+			 <!-- portfolio-wrapper -->
+			  <div id="folio-wrapper" class="block-1-1 block-mob-full stack">
 
+	         	<div class="bgrid folio-item">
+	               <div class="item-wrap">
+	               	<img src="images/portfolio/editme.jpg" alt="Liberty">
+	                  <a href="#modal-p-01" class="overlay">	                  	           
+	                     <div class="folio-item-table">
+	                     	<div class="folio-item-cell">
+								<h3 class="folio-title">EditMe</h3>	     					    
+								<span class="folio-types">
+									Doc Editor
+								</span>
+		     				</div>	                      	
+	                     </div>                    
+	                  </a>
+	               </div>	               
+	        	</div> <!-- /folio-item -->
+
+	            <!-- modal popups - begin
+	            ============================================================= -->
+	            	<div id="modal-p-01" class="popup-modal slider mfp-hide">	
+
+				     	<div class="media">
+				     		<img src="images/portfolio/modals/m-editme.jpg" alt="" />
+				     	</div>      	
+
+					   <div class="description-box">
+					      <h4>EditMe App</h4>		      
+					      <p>
+							EditMe was build in a weekend of 4th of July. EditMe is document editor plataform <br>
+								- ReactJS <br>
+								- Redux <br>
+								- firebase <br>
+								- heroku <br>
+						  </p>
+					      <div class="categories">Web, iOS(coming soon), Android(comming soon), Desktop(comming soon)</div>			               
+					   </div>
+
+			         <div class="link-box">
+			            <a href="https://editme-app.herokuapp.com">Details</a>
+					    <a href="#" class="popup-modal-dismiss">Close</a>
+			         </div>		      
+
+				   	</div> <!-- /modal-01 -->
+				   <!-- modal popups - end
+	            ============================================================= -->
+
+	         </div> <!-- /portfolio-wrapper --> 
    		</div>  <!-- /twelve -->   
 
    	</div> <!-- /portfolio-content --> 
