details button changed to gotopage

--- a/index.html
+++ b/index.html
@@ -475,11 +475,11 @@
 								- firebase <br>
 								- heroku <br>
 						  </p>
-					      <div class="categories">Web, iOS(coming soon), Android(comming soon), Desktop(comming soon)</div>			               
+					      <div class="categories">Web(work in progress)</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://editme-app.herokuapp.com">Details</a>
+			            <a href="https://editme-app.herokuapp.com">Go to Page</a>
 					    <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
